# py-fifo-tracker

./: .gitignore  LICENSE  README.md  pyproject.toml
data/degiro-mock/: mock.csv
data/trade-republic-mock/: mock.csv
src/: __init__.py  cli.py  models.py
src/core/: __init__.py  fifo.py  simulations.py
src/parsers/: __init__.py  base.py  common.py  config.py
src/parsers/brokers/: degiro.py  trade_republic.py
src/parsers/schemas/: degiro.json  trade_republic.json
src/web/: app.py
src/web/templates/: index.html
